# flappie-x-cpp

./: 1test.cpp  2test.c  3test.c  CMakeLists.txt  Makefile  analysis.txt  gmon.out
fast5_small/: signal_0_2db0d956-add4-460c-ab7b-f44bcd4d67e0.fast5
repro/: 1test.cpp  2test.cpp  a.h  a.out  b.h  cin.h  cout.h  out
src/: decode.cpp  fast5_interface.cpp  flappie.cpp  flappie_matrix.cpp  flappie_matrix.h  layers.cpp  layers.cpp.v1  layers.h  networks.cpp  nnfeatures.cpp  nnfeatures.h  sse_mathfun.h  util.h
src/hw/: bitmap_image.hpp  dma_regs.h  ekf.cpp  ekf_hw.cpp  ekf_hw.h  ekf_main.cpp  fast_9_hw.cpp  fast_hw.h  fast_hw_h.h  image_main.cpp  main.cpp  main_vio.cpp  trk_det.cpp  trk_det_opt.cpp  vio.cpp  vio.h  vio_priv.cpp  vio_priv.h  vio_regs.h  vio_utils.h
src/kernel/: .gitignore  Makefile  test.c  vio_drv.h  vio_drv_1.c  vio_drv_lib.h
src/ref_model/: bitmap_image.hpp  ekf_sw.cpp  ekf_sw.h  fast.h  fast_10.cpp  fast_11.cpp  fast_12.cpp  fast_9.cpp  fast_constants.h  scaled_mask.cpp  scaled_mask.h
src/stimuli_gen/: combined.cpp  ekf_main.cpp  image_direct_tracker.cpp  image_main_detector.cpp  image_main_tracker.cpp  image_main_tracker_neg.cpp  image_read.cpp  image_resize_tracker.cpp  main.cpp  main_test.cpp  matrix_generation.cpp  matrix_generation.h  new_combined.cpp  tracker.cpp  tri_storage.cpp  utils.h
src/test/: skeleton_rgr.cpp
